kh - add flare to index html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World!!!
+<html>
+  <head>
+    <title>CS 291 Page</title>
+  </head>
+  <body>
+    <h1>Hello World!!!</h1>
+    <ul>
+      <li>1</li>
+      <li>7</li>
+      <li>3</li>
+      <li>7</li>
+    </ul>
+  </body>
+</html>
