kh - add hyperlink

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <li>3</li>
       <li>7</li>
     </ul>
+    <a href="https://github.com/kheff16/kheff16.github.io">Created on Github (Click me)</a>
   </body>
 </html>
