--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Hello World!!!</h1>
+    <img src="https://github.com/kheff16/kheff16.github.io/blob/main/ZoomBackground_Santa-980x551.png"></img>
     <ul>
       <li>1</li>
       <li>7</li>
