kh - use same domain

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Hello World!!!</h1>
-    <img src="https://github.com/kheff16/kheff16.github.io/blob/main/ZoomBackground_Santa-980x551.png"></img>
+    <img src="https://kheff16.github.io/ZoomBackground_Santa-980x551.png">
     <ul>
       <li>1</li>
       <li>7</li>
