kh - write + link style sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>CS 291 Page</title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <h1>Hello World!!!</h1>
