--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
       <li>3</li>
       <li>7</li>
     </ul>
+    <table>
+      <tr>
+	<th>1</th>
+	<th>2</th>
+      </tr>
+       <tr>
+	<td>3</td>
+	<td>4</td>
+      </tr>
+       <tr>
+	<td>5</td>
+	<td>6</td>
+      </tr>
+    </table>
     <a href="https://github.com/kheff16/kheff16.github.io">Created on Github (Click me)</a>
   </body>
 </html>
