kh - resolve HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>CS 291 Page</title>
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <h1>Hello World!!!</h1>
-    <img src="https://kheff16.github.io/ZoomBackground_Santa-980x551.png">
+    <img alt="Cool Santa Image" src="https://kheff16.github.io/ZoomBackground_Santa-980x551.png">
     <ul>
       <li>1</li>
       <li>7</li>
